--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # State management
+  flutter_riverpod: ^2.4.9
+  
+  # Navigation
+  go_router: ^12.1.3
+  
+  # HTTP requests
+  dio: ^5.4.0
+  
+  # Local storage
+  shared_preferences: ^2.2.2
+  
+  # Image handling
+  cached_network_image: ^3.3.0
+  
+  # UI components
+  google_fonts: ^6.1.0
+  
+  # Video player
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
@@ -57,10 +78,15 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets
+  assets:
+    - assets/videos/
+    - assets/images/logos/
+    - assets/images/icons/
+    - assets/images/backgrounds/
+    - assets/images/illustrations/
+    - assets/animations/
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
