settings flow dark theme completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ flutter:
     - assets/images/illustrations/
     - assets/images/illustrations/Payement_Card_designs/
     - assets/images/Static/
+    - assets/images/Static/Restaurant/
     - assets/images/Static/Restaurant_Foods/
     - assets/images/Static/Food_Categories/
     - assets/animations/
