--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   
   # Cryptographic functions
   crypto: ^3.0.3
+  
+  # Equatable for value comparison
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -111,11 +114,14 @@ flutter:
     - assets/images/illustrations/
     - assets/images/illustrations/Payement_Card_designs/
     - assets/images/Static/
+    - assets/images/Static/Profile_images/
     - assets/images/Static/Restaurant/
     - assets/images/Static/Restaurant_Foods/
     - assets/images/Static/Food_Categories/
     - assets/animations/
     - assets/sounds/
+    - assets/images/avatars/
+    - assets/images/stories/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
